# Embedded_Linux_CMake_Project

./: CMakeLists.txt
include/: WriteInFile.h
src/: main.cpp  print.cpp
